--- a/Image-Colorization-Final.ipynb
+++ b/Image-Colorization-Final.ipynb
@@ -96,12 +96,12 @@
     "data_dir = Path(\"C:/Users/smhal/Desktop/archive2\") \n",
     "img_shape = (512, 512, 3)\n",
     "\n",
-    "folder_paths = ['color', 'bw',]"
+    "folder_paths = ['color', 'bw', 'color_val', 'bw_val']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ee8e138d",
+   "id": "fbf50063",
    "metadata": {},
    "source": [
     "Generators\n",
@@ -112,25 +112,117 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e6139f",
+   "id": "321b4a9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_gen():\n",
-    "    '''Generator for test data\n",
-    "    converts RBG image to HSL numpy array'''"
+    "class first_n(object): # adapted from https://wiki.python.org/moin/Generators\n",
+    "\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "        self.num = 0\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        return self.next()\n",
+    "\n",
+    "    def next(self):\n",
+    "        if self.num < self.n:\n",
+    "            cur, self.num = self.num, self.num+1\n",
+    "            return cur\n",
+    "        raise StopIteration()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3986b9f3",
+   "id": "f35dbaa4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_gen():\n",
+    "def Xtest_gen():\n",
+    "    '''Generator for test data\n",
+    "    converts RBG image to HSL numpy array'''\n",
+    "    test_max = 4500\n",
+    "    \n",
+    "    subset_dir = data_dir / folder_paths[3]\n",
+    "    pics = list(subset_dir.glob('*.jpg'))\n",
+    "    pic = np.random.randint(test_max)\n",
+    "    img = load_img(pic)\n",
+    "    \n",
+    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
+    "    \n",
+    "    yield X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bbd3c24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ytest_gen():\n",
+    "    '''Generator for test data\n",
+    "    converts RBG image to HSL numpy array'''\n",
+    "    test_max = 4500\n",
+    "    \n",
+    "    subset_dir = data_dir / folder_paths[2]\n",
+    "    pics = list(subset_dir.glob('*.jpg'))\n",
+    "    pic = np.random.randint(test_max)\n",
+    "    img = load_img(pic)\n",
+    "    \n",
+    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
+    "    \n",
+    "    yield X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4870714b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Xtrain_gen():\n",
     "    '''Generator for training data\n",
-    "    converts image from 3 channel B/W to 1 channel'''"
+    "    converts image from 3 channel B/W to 1 channel'''\n",
+    "    test_max = 18000\n",
+    "    \n",
+    "    subset_dir = data_dir / folder_paths[1]\n",
+    "    pics = list(subset_dir.glob('*.jpg'))\n",
+    "    img = load_img(pic)\n",
+    "    pic = np.random.randint(test_max)\n",
+    "    img = load_img(pic)\n",
+    "    \n",
+    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
+    "    \n",
+    "    yield X[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3815fda9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ytrain_gen():\n",
+    "    '''Generator for training data\n",
+    "    converts image from 3 channel B/W to 1 channel'''\n",
+    "    test_max = 18000\n",
+    "    \n",
+    "    subset_dir = data_dir / folder_paths[0]\n",
+    "    pics = list(subset_dir.glob('*.jpg'))\n",
+    "    img = load_img(pic)\n",
+    "    pic = np.random.randint(test_max)\n",
+    "    img = load_img(pic)\n",
+    "    \n",
+    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
+    "    \n",
+    "    yield X[0]"
    ]
   },
   {
@@ -162,40 +254,6 @@
    "metadata": {},
    "source": [
     "Next I want to read the data from the files and then just to make sure I am getting the right data from the right files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4b77c313",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#imgs 1333, folder 'train_col_images'\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [10], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# X_train = read_folder(train_folder_paths[1], data_dir) # BW imgs\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m y_train \u001b[38;5;241m=\u001b[39m \u001b[43mread_folder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_folder_paths\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_color\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn [9], line 16\u001b[0m, in \u001b[0;36mread_folder\u001b[1;34m(subset_name, data_dir, is_color)\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m y \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(img)):\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(img[y])):\n\u001b[1;32m---> 16\u001b[0m             img[y][x] \u001b[38;5;241m=\u001b[39m colorsys\u001b[38;5;241m.\u001b[39mrgb_to_hsv(img[y][x][\u001b[38;5;241m0\u001b[39m],img[y][x][\u001b[38;5;241m1\u001b[39m],img[y][x][\u001b[38;5;241m2\u001b[39m])\n\u001b[0;32m     17\u001b[0m     X[i] \u001b[38;5;241m=\u001b[39m img\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "bw_data = read_folder(folder_paths[1], data_dir) # BW imgs\n",
-    "\n",
-    "color_data = read_folder(folder_paths[0], data_dir)"
    ]
   },
   {
