I have a very slow generator working, need to find out how to make this work faster.

--- a/Image-Colorization-Final.ipynb
+++ b/Image-Colorization-Final.ipynb
@@ -30,13 +30,8 @@
     "from pathlib import Path\n",
     "from PIL import Image # for resizing images\n",
     "\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split, ParameterGrid\n",
-    "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras import models, layers, Input, Model, callbacks\n",
-    "from tensorflow.keras.layers import Lambda\n",
+    "from tensorflow.keras import models, layers, Input, Model, callbacks, utils\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "import tensorflow.keras.backend as K\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img\n",
@@ -101,7 +96,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbf50063",
+   "id": "d5642bf1",
+   "metadata": {},
+   "source": [
+    "We need a function to make conversion of each image easier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6f01b9ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hls_conv(image, width=512, height=512):\n",
+    "    image_ = np.array(image, dtype='float32')\n",
+    "    for x in range(width):\n",
+    "        for y in range(height):\n",
+    "            pixel = image_[x][y]\n",
+    "            image_[x][y] = colorsys.rgb_to_hls(pixel[0], pixel[1], pixel[2])\n",
+    "    return image_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad5abfea",
    "metadata": {},
    "source": [
     "Generators\n",
@@ -111,141 +130,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "321b4a9c",
+   "execution_count": 5,
+   "id": "a3cfd055",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class first_n(object): # adapted from https://wiki.python.org/moin/Generators\n",
+    "# class first_n(object): # adapted from https://wiki.python.org/moin/Generators\n",
     "\n",
-    "    def __init__(self, n):\n",
-    "        self.n = n\n",
-    "        self.num = 0\n",
+    "#     def __init__(self, n):\n",
+    "#         self.n = n\n",
+    "#         self.num = 0\n",
     "\n",
-    "    def __iter__(self):\n",
-    "        return self\n",
+    "#     def __iter__(self):\n",
+    "#         return self\n",
     "\n",
-    "    def __next__(self):\n",
-    "        return self.next()\n",
+    "#     def __next__(self):\n",
+    "#         return self.next()\n",
     "\n",
-    "    def next(self):\n",
-    "        if self.num < self.n:\n",
-    "            cur, self.num = self.num, self.num+1\n",
-    "            return cur\n",
-    "        raise StopIteration()\n"
+    "#     def next(self):\n",
+    "#         if self.num < self.n:\n",
+    "#             cur, self.num = self.num, self.num+1\n",
+    "#             return cur\n",
+    "#         raise StopIteration()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f35dbaa4",
+   "execution_count": 6,
+   "id": "c70f13f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Xtest_gen():\n",
-    "    '''Generator for test data\n",
-    "    converts RBG image to HSL numpy array'''\n",
-    "    test_max = 4500\n",
-    "    \n",
-    "    subset_dir = data_dir / folder_paths[3]\n",
-    "    pics = list(subset_dir.glob('*.jpg'))\n",
-    "    pic = np.random.randint(test_max)\n",
-    "    img = load_img(pic)\n",
-    "    \n",
-    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
-    "    \n",
-    "    yield X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bbd3c24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ytest_gen():\n",
-    "    '''Generator for test data\n",
-    "    converts RBG image to HSL numpy array'''\n",
-    "    test_max = 4500\n",
-    "    \n",
-    "    subset_dir = data_dir / folder_paths[2]\n",
-    "    pics = list(subset_dir.glob('*.jpg'))\n",
-    "    pic = np.random.randint(test_max)\n",
-    "    img = load_img(pic)\n",
-    "    \n",
-    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
-    "    \n",
-    "    yield X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4870714b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Xtrain_gen():\n",
+    "def train_gen():\n",
     "    '''Generator for training data\n",
-    "    converts image from 3 channel B/W to 1 channel'''\n",
+    "    converts image from 3 channel averaged B/W to 1 channel'''\n",
     "    test_max = 18000\n",
+    "    seen = set()\n",
     "    \n",
-    "    subset_dir = data_dir / folder_paths[1]\n",
-    "    pics = list(subset_dir.glob('*.jpg'))\n",
-    "    img = load_img(pic)\n",
-    "    pic = np.random.randint(test_max)\n",
-    "    img = load_img(pic)\n",
-    "    \n",
-    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
-    "    \n",
-    "    yield X[0]"
+    "    for images in range(test_max):\n",
+    "        bw_dir = data_dir / folder_paths[1]\n",
+    "        color_dir = data_dir / folder_paths[0]\n",
+    "        \n",
+    "        bw_pics = list(bw_dir.glob('*.jpg'))\n",
+    "        color_pics = list(color_dir.glob('*.jpg'))\n",
+    "        \n",
+    "        pic = np.random.randint(test_max)\n",
+    "        \n",
+    "        if pic not in seen:\n",
+    "            bw_img = load_img(bw_pics[pic])\n",
+    "            color_img = load_img(color_pics[pic])\n",
+    "\n",
+    "            X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
+    "            y = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
+    "            \n",
+    "            X = np.array(bw_img, dtype='float32')\n",
+    "            y = hls_conv(color_img)\n",
+    "            \n",
+    "            yield np.array(X), np.array(y)\n",
+    "            seen.add(pic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3815fda9",
+   "execution_count": 7,
+   "id": "56b1475c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ytrain_gen():\n",
-    "    '''Generator for training data\n",
-    "    converts image from 3 channel B/W to 1 channel'''\n",
-    "    test_max = 18000\n",
+    "class DataGenerator(utils.Sequence): \n",
+    "    '''\n",
+    "    adapted from https://stanford.edu/~shervine/blog/keras-how-to-generate-data-on-the-fly\n",
     "    \n",
-    "    subset_dir = data_dir / folder_paths[0]\n",
-    "    pics = list(subset_dir.glob('*.jpg'))\n",
-    "    img = load_img(pic)\n",
-    "    pic = np.random.randint(test_max)\n",
-    "    img = load_img(pic)\n",
-    "    \n",
-    "    X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
-    "    \n",
-    "    yield X[0]"
+    "    Generates a color and black & white image for training data\n",
+    "    '''\n",
+    "    def __init__(self, list_IDs_color, list_IDs_bw, batch_size=256, \n",
+    "                 dim=img_shape, n_channels=3, shuffle=True):\n",
+    "        self.dim = dim\n",
+    "        self.batch_size = batch_size\n",
+    "        self.list_IDs = list_IDs_bw\n",
+    "        self.list_IDs = list_IDs_color\n",
+    "        self.n_channels = n_channels\n",
+    "        self.shuffle = shuffle\n",
+    "        self.on_epoch_end()\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return int(np.floor(len(self.list_IDs) / self.batch_size))\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        # Generate indexes of the batch\n",
+    "        indexes = self.indexes[index*self.batch_size:(index+1)*self.batch_size]\n",
+    "\n",
+    "        # Find list of IDs\n",
+    "        list_IDs_temp_bw = [self.list_IDs[k] for k in indexes]\n",
+    "        list_IDs_temp_color = [self.list_IDs[k] for k in indexes]\n",
+    "\n",
+    "        # Generate data\n",
+    "        X, y = self.__data_generation(list_IDs_temp_bw, list_IDs_temp_color)\n",
+    "\n",
+    "        return X, y\n",
+    "\n",
+    "    def on_epoch_end(self):\n",
+    "        self.indexes = np.arange(len(self.list_IDs))\n",
+    "        if self.shuffle == True:\n",
+    "            np.random.shuffle(self.indexes)\n",
+    "\n",
+    "    def __data_generation(self, list_IDs_temp_bw, list_IDs_temp_color):\n",
+    "        # Initialization\n",
+    "        X = np.empty((self.batch_size, *self.dim))\n",
+    "        y = np.empty((self.batch_size, *self.dim))\n",
+    "\n",
+    "        # Generate data\n",
+    "        for i, ID in enumerate(list_IDs_temp_bw):\n",
+    "            # B/W image\n",
+    "            X[i] = load_img(ID)\n",
+    "            X[i] = np.array(X[i], dtype='float32')\n",
+    "\n",
+    "            # target image\n",
+    "            y[i] = load_img(list_IDs_temp_color[i])\n",
+    "            y[i] = np.array(hls_conv(y[i]), dtype='float32')\n",
+    "\n",
+    "        return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "09af90c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {'dim': img_shape,\n",
+    "          'n_channels': 1,\n",
+    "          'shuffle': True}\n",
+    "\n",
+    "# Datasets\n",
+    "bw_dir_train = data_dir / folder_paths[1]\n",
+    "color_dir_train = data_dir / folder_paths[0]\n",
+    "\n",
+    "partition_bw = list(bw_dir_train.glob('*.jpg'))\n",
+    "partition_color = list(bw_dir_train.glob('*.jpg'))\n",
+    "\n",
+    "# Generators\n",
+    "training_generator = DataGenerator(partition_bw, partition_color)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b8f3e5b2",
+   "id": "c6198fc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_folder(subset_name, data_dir, is_color=False):\n",
-    "    subset_dir = data_dir / subset_name\n",
-    "    pics = subset_dir.glob('*.jpg')\n",
-    "    num_pics = int(len(list(pics))/15)\n",
-    "    print(f\"#imgs {num_pics}, folder '{subset_name}'\")\n",
-    "    \n",
-    "    X = np.zeros((num_pics, img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
-    "    \n",
-    "    for i, pic in enumerate(subset_dir.glob('*.jpg')):\n",
-    "        if i < num_pics:\n",
-    "            img = load_img(pic)\n",
-    "            X[i] = img\n",
-    "    \n",
-    "    return (X / 255)"
+    "params = {'dim': img_shape,\n",
+    "          'n_channels': 1,\n",
+    "          'shuffle': True}\n",
+    "\n",
+    "bw_dir_val = data_dir / folder_paths[3]\n",
+    "color_dir_val = data_dir / folder_paths[2]\n",
+    "\n",
+    "partition_bw = list(bw_dir_val.glob('*.jpg'))\n",
+    "partition_color = list(color_dir_val.glob('*.jpg'))\n",
+    "\n",
+    "\n",
+    "validation_generator = DataGenerator(partition_bw, partition_color)"
    ]
   },
   {
@@ -258,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "de5e6d77",
    "metadata": {},
    "outputs": [],
@@ -272,30 +319,53 @@
     "filters=3\n",
     "\n",
     "x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(inputs)\n",
-    "x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(inputs)\n",
-    "x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(inputs)\n",
-    "x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(inputs)\n",
+    "x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(x)\n",
     "# x = layers.MaxPooling2D(2, padding='same', strides=1)(x)\n",
     "\n",
+    "# x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(x)\n",
+    "# x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(x)\n",
+    "\n",
+    "output = x\n",
     "# Flatten and output Block\n",
-    "embedding_model = Model(inputs, x)"
+    "embedding_model = Model(inputs, output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0b487c01",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_1 (InputLayer)         [(None, 512, 512, 3)]     0         \n",
+      "_________________________________________________________________\n",
+      "separable_conv2d (SeparableC (None, 512, 512, 3)       24        \n",
+      "_________________________________________________________________\n",
+      "separable_conv2d_1 (Separabl (None, 512, 512, 3)       24        \n",
+      "=================================================================\n",
+      "Total params: 48\n",
+      "Trainable params: 48\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "embedding_model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e1faf75e",
    "metadata": {},
    "outputs": [],
@@ -317,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e9cc95ef",
    "metadata": {},
    "outputs": [],
@@ -329,13 +399,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "aea32ab2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# model_input = datagen.flow(X_train, y_train, batch_size=32)\n",
     "\n",
-    "embedding_model.compile(optimizer='rmsprop', loss='mse',  metrics=['loss'])\n",
-    "embedding_model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=5)"
+    "embedding_model.compile(optimizer='rmsprop', loss='mse',  metrics=['accuracy'])\n",
+    "embedding_model.fit(training_generator, \n",
+    "                    epochs=5,\n",
+    "                    use_multiprocessing=True,\n",
+    "                    workers=18)"
    ]
   },
   {
@@ -363,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
