Modified so it is a bit faster

--- a/Image-Colorization-Final.ipynb
+++ b/Image-Colorization-Final.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "---\n",
     "\n",
-    "Imports"
+    "## Imports\n",
+    "\n",
+    "We have to import some unsual libraries in order to get the RGB values of our target images into HSL format, and a few more for ease of viewing and on the same note ease displaying data."
    ]
   },
   {
@@ -99,6 +101,10 @@
    "id": "d5642bf1",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "## Useful Functions\n",
+    "\n",
     "We need a function to make conversion of each image easier"
    ]
   },
@@ -123,76 +129,16 @@
    "id": "ad5abfea",
    "metadata": {},
    "source": [
-    "Generators\n",
+    "---\n",
     "\n",
-    "The first generator gets "
+    "## Data Generator\n",
+    "\n",
+    "Since we cannot hope to hold onto 18000 images in our kernel, we have to use a generator in order to be able to get data from the file and then train on that data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a3cfd055",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class first_n(object): # adapted from https://wiki.python.org/moin/Generators\n",
-    "\n",
-    "#     def __init__(self, n):\n",
-    "#         self.n = n\n",
-    "#         self.num = 0\n",
-    "\n",
-    "#     def __iter__(self):\n",
-    "#         return self\n",
-    "\n",
-    "#     def __next__(self):\n",
-    "#         return self.next()\n",
-    "\n",
-    "#     def next(self):\n",
-    "#         if self.num < self.n:\n",
-    "#             cur, self.num = self.num, self.num+1\n",
-    "#             return cur\n",
-    "#         raise StopIteration()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c70f13f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_gen():\n",
-    "    '''Generator for training data\n",
-    "    converts image from 3 channel averaged B/W to 1 channel'''\n",
-    "    test_max = 18000\n",
-    "    seen = set()\n",
-    "    \n",
-    "    for images in range(test_max):\n",
-    "        bw_dir = data_dir / folder_paths[1]\n",
-    "        color_dir = data_dir / folder_paths[0]\n",
-    "        \n",
-    "        bw_pics = list(bw_dir.glob('*.jpg'))\n",
-    "        color_pics = list(color_dir.glob('*.jpg'))\n",
-    "        \n",
-    "        pic = np.random.randint(test_max)\n",
-    "        \n",
-    "        if pic not in seen:\n",
-    "            bw_img = load_img(bw_pics[pic])\n",
-    "            color_img = load_img(color_pics[pic])\n",
-    "\n",
-    "            X = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
-    "            y = np.zeros((img_shape[0], img_shape[1], img_shape[2]), dtype='float32')\n",
-    "            \n",
-    "            X = np.array(bw_img, dtype='float32')\n",
-    "            y = hls_conv(color_img)\n",
-    "            \n",
-    "            yield np.array(X), np.array(y)\n",
-    "            seen.add(pic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "56b1475c",
    "metadata": {},
    "outputs": [],
@@ -203,7 +149,7 @@
     "    \n",
     "    Generates a color and black & white image for training data\n",
     "    '''\n",
-    "    def __init__(self, list_IDs_color, list_IDs_bw, batch_size=256, \n",
+    "    def __init__(self, list_IDs_color, list_IDs_bw, batch_size=8, \n",
     "                 dim=img_shape, n_channels=3, shuffle=True):\n",
     "        self.dim = dim\n",
     "        self.batch_size = batch_size\n",
@@ -254,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "09af90c0",
    "metadata": {},
    "outputs": [],
@@ -276,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c6198fc7",
    "metadata": {},
    "outputs": [],
@@ -300,12 +246,16 @@
    "id": "7a17dfe5",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "## Model(s)\n",
+    "\n",
     "Next I want to read the data from the files and then just to make sure I am getting the right data from the right files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "de5e6d77",
    "metadata": {},
    "outputs": [],
@@ -332,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "0b487c01",
    "metadata": {
     "scrolled": false
@@ -365,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e1faf75e",
    "metadata": {},
    "outputs": [],
@@ -387,12 +337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e9cc95ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8ac0c44",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Training"
    ]
   },
   {
@@ -402,15 +362,24 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    }
+   ],
    "source": [
-    "# model_input = datagen.flow(X_train, y_train, batch_size=32)\n",
     "\n",
     "embedding_model.compile(optimizer='rmsprop', loss='mse',  metrics=['accuracy'])\n",
     "embedding_model.fit(training_generator, \n",
     "                    epochs=5,\n",
     "                    use_multiprocessing=True,\n",
-    "                    workers=18)"
+    "                    workers=32)\n",
+    "# embedding_model.fit(training_generator, \n",
+    "#                     epochs=5)"
    ]
   },
   {
@@ -418,7 +387,11 @@
    "id": "75476bbd",
    "metadata": {},
    "source": [
-    "END"
+    "---\n",
+    "\n",
+    "## Conclusions\n",
+    "\n",
+    "Para1..."
    ]
   }
  ],
