--- a/Image-Colorization-Final.ipynb
+++ b/Image-Colorization-Final.ipynb
@@ -92,6 +92,7 @@
    "source": [
     "data_dir = Path(\"C:/Users/smhal/Desktop/archive2\") \n",
     "img_shape = (512, 512, 3)\n",
+    "shrink_shape = (256, 256, 3)\n",
     "\n",
     "folder_paths = ['color', 'bw', 'color_val', 'bw_val']"
    ]
@@ -149,8 +150,8 @@
     "    \n",
     "    Generates a color and black & white image for training data\n",
     "    '''\n",
-    "    def __init__(self, list_IDs_color, list_IDs_bw, batch_size=8, \n",
-    "                 dim=img_shape, n_channels=3, shuffle=True):\n",
+    "    def __init__(self, list_IDs_color, list_IDs_bw, batch_size=4, \n",
+    "                 dim=shrink_shape, n_channels=3, shuffle=True):\n",
     "        self.dim = dim\n",
     "        self.batch_size = batch_size\n",
     "        self.list_IDs = list_IDs_bw\n",
@@ -172,7 +173,7 @@
     "\n",
     "        # Generate data\n",
     "        X, y = self.__data_generation(list_IDs_temp_bw, list_IDs_temp_color)\n",
-    "\n",
+    "        \n",
     "        return X, y\n",
     "\n",
     "    def on_epoch_end(self):\n",
@@ -188,14 +189,18 @@
     "        # Generate data\n",
     "        for i, ID in enumerate(list_IDs_temp_bw):\n",
     "            # B/W image\n",
-    "            X[i] = load_img(ID)\n",
+    "            img = load_img(ID)\n",
+    "            X[i] = img.resize(shrink_shape[:2])\n",
     "            X[i] = np.array(X[i], dtype='float32')\n",
     "\n",
     "            # target image\n",
-    "            y[i] = load_img(list_IDs_temp_color[i])\n",
-    "            y[i] = np.array(hls_conv(y[i]), dtype='float32')\n",
+    "            img = load_img(list_IDs_temp_color[i])\n",
+    "            y[i] = img.resize(shrink_shape[:2])\n",
+    "#             y[i] = y[i].convert(\"HSL\")\n",
+    "            y[i] = np.array(y[i], dtype='float32')\n",
+    "#             y[i] = np.array(hls_conv(y[i].resize(shrink_shape), width=256, height=256), dtype='float32')\n",
     "\n",
-    "        return X, y"
+    "        return X[0], y"
    ]
   },
   {
@@ -205,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {'dim': img_shape,\n",
+    "params = {'dim': shrink_shape,\n",
     "          'n_channels': 1,\n",
     "          'shuffle': True}\n",
     "\n",
@@ -227,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {'dim': img_shape,\n",
+    "params = {'dim': shrink_shape,\n",
     "          'n_channels': 1,\n",
     "          'shuffle': True}\n",
     "\n",
@@ -263,20 +268,18 @@
     "K.clear_session()  # delete old models\n",
     "act_fun='relu'\n",
     "\n",
-    "inputs=Input(img_shape)\n",
+    "layer_input_shape = (shrink_shape[0], shrink_shape[1], 1)\n",
+    "inputs=Input(layer_input_shape)\n",
     "\n",
     "# YOUR CONVOLUTIONAL LAYERS GO HERE\n",
-    "filters=3\n",
+    "filters = 1\n",
+    "filter_size = 5\n",
     "\n",
-    "x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(inputs)\n",
-    "x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(x)\n",
-    "# x = layers.MaxPooling2D(2, padding='same', strides=1)(x)\n",
-    "\n",
-    "# x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(x)\n",
-    "# x = layers.SeparableConv2D(filters, 2, padding='same', activation=act_fun)(x)\n",
+    "x = layers.SeparableConv2D(filters, filter_size, padding='same', activation=act_fun)(inputs)\n",
+    "x = layers.SeparableConv2D(filters, filter_size, padding='same', activation=act_fun)(x)\n",
     "\n",
     "output = x\n",
-    "# Flatten and output Block\n",
+    "\n",
     "embedding_model = Model(inputs, output)"
    ]
   },
@@ -296,14 +299,14 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         [(None, 512, 512, 3)]     0         \n",
+      "input_1 (InputLayer)         [(None, 256, 256, 1)]     0         \n",
       "_________________________________________________________________\n",
-      "separable_conv2d (SeparableC (None, 512, 512, 3)       24        \n",
+      "separable_conv2d (SeparableC (None, 256, 256, 1)       27        \n",
       "_________________________________________________________________\n",
-      "separable_conv2d_1 (Separabl (None, 512, 512, 3)       24        \n",
+      "separable_conv2d_1 (Separabl (None, 256, 256, 1)       27        \n",
       "=================================================================\n",
-      "Total params: 48\n",
-      "Trainable params: 48\n",
+      "Total params: 54\n",
+      "Trainable params: 54\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -315,44 +318,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "68eeabcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "e1faf75e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input0 = Input(img_shape, name='input0')\n",
-    "# input1 = Input(img_shape, name='input1')\n",
-    "# input2 = Input(img_shape, name='input2')\n",
+    "_input = Input(layer_input_shape)\n",
     "\n",
-    "# sub0 = embedding_model(input0)\n",
-    "# sub1 = embedding_model(input1)\n",
-    "# sub2 = embedding_model(input2)\n",
+    "sub0 = embedding_model(_input)\n",
+    "sub1 = embedding_model(_input)\n",
     "\n",
-    "# pred = layers.Concatenate(axis=1)([sub0, sub1, sub2])\n",
+    "# full_input = np.array(img_shape)\n",
     "\n",
-    "# model = Model([input0, input1, input2], pred)\n",
+    "# full_input[0] = sub0 # Hue\n",
+    "# full_input[1] = input2 # Light\n",
+    "# full_input[2] = sub1 # Saturation\n",
     "\n",
-    "# model.compile(optimizer='rmsprop', loss='mse',  metrics=['accuracy'])"
+    "x = layers.Concatenate(axis=3)([sub0, _input, sub1])\n",
+    "x = layers.SeparableConv2D(3, filter_size, padding='same', activation=act_fun)(x)\n",
+    "\n",
+    "pred = x\n",
+    "model = Model(_input, pred)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "id": "e9cc95ef",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_2 (InputLayer)            [(None, 256, 256, 1) 0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "model (Functional)              (None, 256, 256, 1)  54          input_2[0][0]                    \n",
+      "                                                                 input_2[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate (Concatenate)       (None, 256, 256, 3)  0           model[0][0]                      \n",
+      "                                                                 input_2[0][0]                    \n",
+      "                                                                 model[1][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "separable_conv2d_2 (SeparableCo (None, 256, 256, 3)  87          concatenate[0][0]                \n",
+      "==================================================================================================\n",
+      "Total params: 141\n",
+      "Trainable params: 141\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "# model.summary()"
+    "model.summary()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d8ac0c44",
+   "id": "74d0f2c2",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
     "## Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7423f8d9",
+   "metadata": {},
+   "source": [
+    "Creating a loss function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0ebd7252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_loss_fn(y_true, y_pred):\n",
+    "    sum_error = 0.0;\n",
+    "    for x in range(shrink_shape[0]):\n",
+    "        for y in range(shrink_shape[0]):\n",
+    "#             if x % 2 == 0 and y % 2 == 0:\n",
+    "            sum_error += y_true[x][y] - y_pred[x][y]\n",
+    "    return tf.reduce_mean(sum_error, axis=-1)"
    ]
   },
   {
@@ -372,15 +438,30 @@
     }
    ],
    "source": [
+    "model.compile(optimizer='rmsprop', loss=my_loss_fn,  metrics=['accuracy'])\n",
     "\n",
-    "embedding_model.compile(optimizer='rmsprop', loss='mse',  metrics=['accuracy'])\n",
-    "embedding_model.fit(training_generator, \n",
-    "                    epochs=5,\n",
-    "                    use_multiprocessing=True,\n",
-    "                    workers=32)\n",
-    "# embedding_model.fit(training_generator, \n",
-    "#                     epochs=5)"
+    "model.fit(training_generator, epochs=5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7d504b7",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Example Results\n",
+    "\n",
+    "Here is a few images that were colorized with this model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23648b81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
